--- a/css/style.css
+++ b/css/style.css
@@ -544,7 +544,6 @@ cursor:pointer;
   /* padding: 9.6rem 0 12.8rem 0; */
 
   /* top / horizontal / left */
-  margin:0 350px;
   padding: 4.8rem 0 5rem;
 }
 
